# SpacePeanut

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build_sp.sh
cmake/: FindFFTWF.cmake
src/: CMakeLists.txt  acceleration.cc  acceleration.hh  acceleration_kernels.hh  acceleration_par.hh  acceleration_std.cc  fftw3f_allocator.hh  fftw3f_interface.cc  fftw3f_interface.hh  fftw3f_util.hh  get_input.hh  grid_utils.cc  main.cc  parallel_utils.hh  particle_mesh_system.cc  particle_mesh_system.hh  periodic_boundary.cc  periodic_boundary.hh  simulator.cc  simulator.hh  time_logger.cc  utils.cc  utils.hh
src/app/: CMakeLists.txt  SDL_test.cc  app.cc  app.hh  app_state.cc  camera.cc  camera.hh  color_palette.cc  color_palette.hh  render_ui.cc  renderer.cc  renderer.hh  triad_renderer.cc
src/app/shaders/: frag.glsl  frag_linear.glsl  frag_log.glsl  frag_triad.glsl  vert.glsl  vert_triad.glsl
src/fftw3f/: CMakeLists.txt  fftw3f_allocator.hh  fftw3f_util.cc  fftw3f_util.hh
src/parallel_utils/: CMakeLists.txt  par_utils_impl.hh  par_utils_omp.hh  par_utils_std.hh  parallel_utils.hh
src/particle_mesh/: CMakeLists.txt  particle_mesh_system.cc  particle_mesh_system.hh  time_logger.cc  time_logger.hh  utils.cc  utils.hh
src/particle_mesh/boundary_condition/: CMakeLists.txt  periodic_boundary.cc  periodic_boundary.hh  periodic_boundary_impl.hh  periodic_boundary_omp.cc  periodic_boundary_std.cc
src/particle_mesh/gravity/: CMakeLists.txt  acceleration.cc  acceleration.hh  acceleration_kernels.hh  acceleration_omp.cc  acceleration_par.hh  acceleration_std.cc  lambdaCDM.cc  lambdaCDM.hh
src/particle_mesh/grid_utils/: CMakeLists.txt  grid_constants.hh  grid_utils.cc  grid_utils.hh  grid_utils_impl.hh
src/simulator/: CMakeLists.txt  get_input.cc  simulator.cc  simulator.hh  space_time.cc  space_time.hh
